# qrschool

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CNAME  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  index.html  my_data_model_diagram  pyproject.toml  qrschool.wpr  qrschool.wpu  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  test.yml
about/: index.html
about/about/: index.html
about/contact/: index.html
about/license/: index.html
admin/: index.html
admin/admininterfase/: index.html
admin/cli/: index.html
admin/userprofiles/: index.html
css/: custom.css
docs/: createdb.md
docs/en/: mkdocs.yml
docs/en/docs/: about.md  createdb.md  features.md  index.md  initconfig.md  profiles.md
docs/en/docs/about/: license.md
docs/en/docs/admin/: admininterfase.md  cli.md  index.md
docs/en/docs/user/: index.md  profiles.md  qr.md
docs/en/layouts/: custom.yml
docs/en/overrides/: main.html
docs/es/docs/: index.md
docs/es/docs/about/: contact.md  index.md  license.md
docs/es/docs/admin/: admininterfase.md  cli.md  index.md
docs/es/docs/css/: pdf.scss
docs/es/docs/js/: custom.js
docs/es/docs/user/: absence.md  attendance.md  index.md  profiles.md  qr.md
features/: index.html
js/: custom.js
license/: index.html
scripts/: generate_postman.py  generate_sqlalchemy_models.py  postman.json  pytest.sh
search/: search_index.json
src/: config.py  gunicorn_config.py  main.py  test.py  test_create_permissions.py
src/app/: __init__.py  apitools.py  config.py  imp_modules.py  jwt.py  loginmanager.py  toolsapk.py
src/app/admin/: __init__.py  views.py
src/app/modules/: __init__.py
src/app/modules/Asistencia/: controller.py  model.py  pdModels.py  routes.py  view.py
src/app/modules/Ausentismo/: controller.py  model.py  pdModels.py  routes.py  view.py
src/app/modules/Calendario/: model.py
src/app/modules/Calificacion/: model.py
src/app/modules/Dashboard/: controller.py  model.py  pdModels.py  view.py
src/app/modules/Horario/: model.py
src/app/modules/Login/: controller.py  model.py  pdModels.py  routes.py  view.py
src/app/modules/Materia/: model.py
src/app/modules/Matriculas/: model.py  pdModels.py  routes.py  view.py
src/app/modules/Qr/: controller.py  model.py  pdModels.py  routes.py  view.py
src/app/modules/User/: controller.py  model.py  pdModels.py  routes.py  view.py
src/app/routes/: __init__.py
src/app/shellcontex/: __init__.py  cli.py  createdb.py  registeradmin.py  whatnext.py
src/app/static/css/: base.css  signin.css
src/app/templates/: base.html  footer.html  index.html  login.html  navbar.html
src/app/templates/admin/: index.html
src/migrations/versions/: 236537e82b68_.py  3affa380256e_.py  5736f461d59c_.py  9a88efaf8340_.py  9b5e15a6b94f_.py  9d58b6dfab4a_.py
tests/: __init__.py  app_init_test.py  conftest.py  env_test.py  test_config.py  test_toolsapk.py  tool.py  toolsapk_test.py
tests/api_test/: session_test.py
user/: index.html
user/absence/: index.html
user/attendance/: index.html
user/profiles/: index.html
user/qr/: index.html
