[tool.poetry]
name = "qrschool"
version = "0.1.0"
description = "Read QR code"
authors = ["Sebastian Lopez Buritica <selobu@gmail.com>"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
flask = "2.3.2"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.5.3"
flask-restx = "^1.1.0"
flask-sqlalchemy = "^3.1.1"
itsdangerous = "^2.1.2"
pre-commit = "^3.4.0"
pydantic = "^2.4.2"
pyjwt = "^2.8.0"
pymysql = "^1.1.0"
flask-admin = "^1.6.1"
flask-wtf = "^1.2.1"
flask-bootstrap4 = "^4.0.2"
flask-login = "^0.6.2"
flask-migrate = "^4.0.5"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.21"
gunicorn = "^21.2.0"
werkzeug = "2.3.6"
cryptography = "^41.0.4"
python-dotenv = "^1.0.0"
xlsxwriter = "^3.1.9"
msgpack = "^1.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[project.urls]
Homepage = "https://github.com/selobu/qrschool"
Documentation = "https://selobu.github.io/qrschool/"
Repository = "https://github.com/selobu/qrschool"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
